--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		<meta name="msapplication-TileColor" content="#2b5797">
 		<meta name="theme-color" content="#008080">		
 		<meta name="viewport" content="width=device-width, user-scalable=no">
+  <iframe src="/sounds/startup.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe> 
+
+                
+	
 	</head>
 	<body>
 		<div class="desktop" style="background-image: url(images/clouds.jpg); background-size: cover; background-position: center;"></div>
